--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -32,45 +32,22 @@ body {
     font-family: 'IRANSemi'!important;
 }
 
-#content {
-  display: flex;
-  flex-direction: column;
-  width: 100vw;
-  height: 100vh;
-  text-align: center;
+.animate{
+     /* make things invisible upon start */
+  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation:fadeIn ease-in 1;
+  animation:fadeIn ease-in 1;
+
+  -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+
+  -webkit-animation-duration:.3s;
+  -moz-animation-duration:.3s;
+  animation-duration:.3s;
 }
-#content .header {
-  width: 100%;
-  height: 60px;
-  border-bottom: 1px solid #444n;
-}
-#content .holygrail-body {
-  flex: 1 0 auto;
-  display: flex;
-}
-#content .holygrail-body .content {
-  flex: 1 0 auto;
-  background: url('../img/map.png');
-}
-#content .holygrail-body .nav {
-  width: 100px;
-  list-style: none;
-  text-align: left;
-  order: -1;
-  margin: 0;
-}
-#content .holygrail-body .aside {
-  width: 100px;
-}
-#content .footer {
-  width: 100%;
-  height: 60px;
-}
-@media (max-width: 700px) {
-  #content .holygrail-body {
-    flex-direction: column;
+@-webkit-keyframes fadeIn {
+   from { width:0 } to { opacity:1;width:200px  } 
   }
-  #content .holygrail-body .nav, #content .holygrail-body .aside {
-    width: 100%;
-  }
-}
+@-moz-keyframes fadeIn { from { width:0  } to { opacity:1;width:200px  } }
+@keyframes fadeIn { from { width:0  } to { opacity:1;width:200px  } }
