--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -31,9 +31,19 @@ body {
 *{
     font-family: 'IRANSemi'!important;
 }
-
+.list-item,.account{
+  padding:0!important;
+}
+.account span{
+  color:#f07000;
+  font-size:.8rem;
+}
+.account p{
+  color:#f07000;
+  font-size:.9rem;
+  font-weight: bold;
+}
 .animate{
-     /* make things invisible upon start */
   -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
   -moz-animation:fadeIn ease-in 1;
   animation:fadeIn ease-in 1;
