--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,11 +1,11 @@
-@font-face {
+ @font-face { 
   font-family: IRANSemi;
   src: url('../fonts/IRANSemiBold.eot');
   src: url('../fonts/IRANSemiBold.eot?#iefix') format('embedded-opentype'),
        url('../fonts/IRANSemiBold.woff') format('woff'),
        url('../fonts/IRANSemiBold.ttf') format('truetype');
-  font-weight: normal;
-}
+   font-weight: normal;
+ }
 body {
   width: 100vw;
   height: 100vh;
@@ -80,21 +80,23 @@ body {
 .top{
   height: 65px;
   width:100%;
+  display: flex;
+  justify-content: space-between;
   border-bottom: 1px solid #333
 }
 .top .item1 {
-  width: 120px;
   justify-content: center;
   align-items: center;
   padding-left:5px;
   display: flex;
 }
 .top .item2 { 
-  width: calc(100% - 370px);
   overflow: hidden;
+  padding-right:55px;
+  width: 100%;
+  min-width: 300px;
 }
 .top .item3 { 
-  width: 350px;
   display: flex;
   justify-content: space-between;
   align-items: stretch;
@@ -126,7 +128,6 @@ body {
   padding:10px;
 }
 .bottom{
-  height:100%;
   width:100%;
   border-top: 1px solid #333;
 }
