--- a/src/component/main/sidebar/chat/ChatBubble.css
+++ b/src/component/main/sidebar/chat/ChatBubble.css
@@ -5,12 +5,12 @@
   font-family: sans-serif;
   font-size: 14px;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .bubble-direction-reverse {
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
 }
 
 .bubble{
