--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -16,6 +16,7 @@ body {
      -khtml-user-select: none; 
        -moz-user-select: none;
             user-select: none; 
+  -webkit-overflow-scrolling: touch;
 }
 .theme-default{
   color:#fff;
@@ -104,7 +105,7 @@ body {
 }
 
 .center{
-  height:83vh;
+  height:82%;
   width:100%;
 }
 .center>.item1 {
@@ -129,7 +130,10 @@ body {
 }
 .bottom{
   width:100%;
+  position: fixed;
+  bottom: 0;
   border-top: 1px solid #333;
+  background: #151515;
 }
 .animated{
   border-right: 1px solid #333;
@@ -185,7 +189,7 @@ body {
 .loading {
   position: absolute;
   float: left;
-  top: 50%;
+  bottom: -8px;
   left: 50%;
   height: 120px;
   padding: 0px;
@@ -302,7 +306,26 @@ body {
   animation-delay: 1.25s;
 }
 
+.rotate{
+  width: 100%;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  display: none;
+  position: fixed;
+  top:0;
+  left:0;
+  background:#222;
+  z-index: 9999999;
+}
 
+@media only screen and (orientation:portrait){
+  .rotate {
+    display:flex;
+  }
+}
 
 .swing-in-top-fwd{-webkit-animation:swing-in-top-fwd .5s cubic-bezier(.175,.885,.32,1.275) both;animation:swing-in-top-fwd .5s cubic-bezier(.175,.885,.32,1.275) both}
 
