--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -10,6 +10,7 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  background-color: rgb(21, 21, 21);
   margin: 0;
     -webkit-touch-callout: none; 
     -webkit-user-select: none;
@@ -17,6 +18,11 @@ body {
        -moz-user-select: none;
             user-select: none; 
   -webkit-overflow-scrolling: touch;
+    background-image: url('../img/map.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: contain;
 }
 .scrollbar::-webkit-scrollbar {
    width: 0 !important 
@@ -29,11 +35,7 @@ body {
 
 .theme-default{
   color:#fff;
-  background-color: #151515;
-  background-image: url('../img/map.png');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
+  background-color: rgba(21, 21, 21, 0.95);
 }
 #root{
   width: 100vw;
@@ -114,7 +116,7 @@ body {
 }
 
 .center{
-  height:calc(100% - 110px);
+  height:calc(100% - 115px);
   width:100%;
 }
 .center>.item1 {
@@ -144,7 +146,6 @@ body {
   position: fixed;
   bottom: 0;
   border-top: 1px solid #333;
-  background: #151515;
 }
 .animated{
   border-right: 1px solid #333;
@@ -190,14 +191,13 @@ body {
   position: absolute;
   width:100%;
   height:100%;
-  background: rgba(0,0,0,.2);
   z-index: 99999;
 
 }
 .loading {
   position: absolute;
   float: left;
-  bottom: -8px;
+  bottom: 5px;
   left: 50%;
   height: 120px;
   padding: 0px;
